metadata layout bugfix again

--- a/twitch/twitch_personal_layout.user.css
+++ b/twitch/twitch_personal_layout.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           twitch.tv Personal Layout
 @namespace      nerblo
-@version        1.7.6
+@version        1.7.7
 @author         nerblo
 @license        CC-BY-SA-4.0
 @description    twitch.tv Personal Layout
@@ -142,10 +142,10 @@ url-prefix("https://dashboard.twitch.tv/")
     .channel-info-content .metadata-layout__support {
         margin-top: -14px !important;
     }
-    .channel-info-content .metadata-layout__support .gTJdSw {
+    .channel-info-content .metadata-layout__support .eDoSGW {
         height: 1.3em !important;
     }
-    .channel-info-content .esDcYx {
+    .channel-info-content .hUpFyj {
         margin-top: 8px !important;
     }
 
